--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JesseDEV</title>
+  <title><img src="" alt=""> JesseDEV</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <header class="menu-wrap">
+    <header class="menu-wrap">
     <nav class="nav-bar">
       <a href="#" class="logo"> < > </a>
       <div class="off-screen-menu">
@@ -25,7 +25,7 @@
         <span></span>
       </div>
     </nav>
-  </header>
+    </header>
   <section class="wrapper">
     <h1>I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
@@ -54,29 +54,53 @@
       </div>
 
       <div class="card-2">
-        <img src="./images/Screenshot (36).png" alt="" class="img-1">
-        <b class="project-1">AMS</b>
+        <img src="./images/Screenshot (37).png" alt="" class="img-1">
+        <b class="project-1">Portfolio Template</b>
         <div class="card-title">
           <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
-        <p class="card-text">An African movie youth website
-          to connect in various events.</p>
+        <p class="card-text">A web developer portfolio
+          template.</p>
           <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
           <button class="card-btn">See project</button>
       </div>
 
       <div class="card-3">
-        <img src="./images/Screenshot (36).png" alt="" class="img-1">
-        <b class="project-1">AMS</b>
+        <img src="./images/Screenshot (38).png" alt="" class="img-1">
+        <b class="project-1">PatrolIQ</b>
         <div class="card-title">
-          <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
+          <h2 class="details">UI/UX</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"><b class="year">2024</b>
         </div>
-        <p class="card-text">An African movie youth website
-          to connect in various events.</p>
-          <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
+        <p class="card-text">An intelligent software solution designed to streamline security patrol operations</p>
+          <div class="html">Figma</div>
           <button class="card-btn">See project</button>
       </div>
     </section>
+    <section class="skills">
+      <b class="skills-list">Skills</b>
+        <div class="skill-logos">
+          <img src="./icons/html5.svg" alt="">
+          <img src="./icons/css.svg" alt="">
+          <img src="./icons/javascript.svg" alt="" class="js-logo">
+          <img src="./icons/figma.svg" alt="" class="figma-logo">
+        </div>
+    </section>
+    <section class="contact">
+      <b class="contact-title">Contact</b>
+      <p class="contact-text">I’m currently looking for new opportunities to grow my tech experience, hit me up, and I will be in touch!
+      </p>
+      <a href="" class="contact-email">kayjes00@gmail.com</a>
+
+      <div class="socials">
+        <ul class="contact-socials">
+          <li><img src="./icons/new-twitter.svg" alt="X" class="media"></li>
+          <li><img src="./icons/mail.svg" alt="mail" class="media"></li>
+          <li><img src="./icons/github.svg" alt="github" class="media"></li>
+          <li><img src="./icons/linkedin.svg" alt="linkedin" class="media"></li>
+        </ul>
+      </div>
+    </section>
+    <footer>&copy;COPYRIGHT JesseDEV</footer>
   </section>
  
   <script src="./index.js"></script>
