--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><img src="" alt=""> JesseDEV</title>
+<title>JesseDEV</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
       </div>
     </section>
     <section class="skills">
-      <b class="skills-list">Skills</b>
+      <b class="skills-list">Tech Skills</b>
         <div class="skill-logos">
           <img src="./icons/html5.svg" alt="">
           <img src="./icons/css.svg" alt="">
@@ -100,7 +100,7 @@
         </ul>
       </div>
     </section>
-    <footer>&copy;COPYRIGHT JesseDEV</footer>
+    <footer>&copy; 2024, All rights reserved</footer>
   </section>
  
   <script src="./index.js"></script>
