fix linters errors

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <header class="menu-wrap">
     <nav class="nav-bar">
       <a href="#" class="logo"> < > </a>
+      <ul class="desktop-menu desktop-menu-wrap">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Skills</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
       <div class="off-screen-menu">
         <ul>
           <li>About</li>
@@ -17,28 +23,22 @@
           <li>Skills</li>
           <li>Contact</li>
         </ul>
+        
       </div>
       
       <div class="ham-menu">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
     </nav>
     </header>
   <section class="wrapper">
-    <h1>I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
+    <h1 class="h1-desktop">I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
 
-    <h2 class="connect">LET'S CONNECT</h2>
-    <div class="socials">
-      <ul>
-        <li><img src="./icons/new-twitter.svg" alt="X" class="media"></li>
-        <li><img src="./icons/mail.svg" alt="mail" class="media"></li>
-        <li><img src="./icons/github.svg" alt="github" class="media"></li>
-        <li><img src="./icons/linkedin.svg" alt="linkedin" class="media"></li>
-      </ul>
-    </div>
+    <button class="btn-intro">Get in touch</button>
+    <hr>
     <section class="work">
       <b class="work-cards">Work</b>
       <div class="card-1">
@@ -76,6 +76,7 @@
           <button class="card-btn">See project</button>
       </div>
     </section>
+    <hr>
     <section class="skills">
       <b class="skills-list">Tech Skills</b>
         <div class="skill-logos">
