modify html and css files

--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@
   <section class="wrapper">
     <h1 class="h1-desktop">I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
-
+    
+    <div class="img-profile"><img src="./images/him.jpg" alt="Jesse" class="img-responsive"></div>
     <button class="btn-intro">Get in touch</button>
+    
+    <br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
+    <br><br><br><br><br><br><br><br><br>
+
     <section class="work">
-      <b class="work-cards">Work</b>
-      <div class="card-1">
+      <b class="work-cards desktop-cards">Work</b>
+      <div class="card-1 card-desktop-1">
         <img src="./images/Screenshot (36).png" alt="" class="img-1">
-        <b class="project-1">AMS</b>
-        <div class="card-title">
-          <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
+        <b class="project-1 project-1-desktop">AMS</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
         <p class="card-text">An African movie youth website
           to connect in various events.</p>
@@ -53,7 +58,7 @@
           <button class="card-btn">See project</button>
       </div>
 
-      <div class="card-2">
+      <div class="card-2 card-desktop-2">
         <img src="./images/Screenshot (37).png" alt="" class="img-1">
         <b class="project-1">Portfolio Template</b>
         <div class="card-title">
@@ -65,7 +70,7 @@
           <button class="card-btn">See project</button>
       </div>
 
-      <div class="card-3">
+      <div class="card-3 card-desktop-3">
         <img src="./images/Screenshot (38).png" alt="" class="img-1">
         <b class="project-1">PatrolIQ</b>
         <div class="card-title">
