Finalize desktop version

--- a/index.html
+++ b/index.html
@@ -46,44 +46,45 @@
 
     <section class="work">
       <b class="work-cards desktop-cards">Work</b>
-      <div class="card-1 card-desktop-1">
-        <img src="./images/Screenshot (36).png" alt="" class="img-1">
-        <b class="project-1 project-1-desktop">AMS</b>
+      <div class="card-1 card-desktop">
+        <img src="./images/Screenshot (36).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">AMS</b>
         <div class="card-title card-title-desktop">
           <h2 class="details details-desktop">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
-        <p class="card-text">An African movie youth website
+        <p class="card-text text-desktop">An African movie youth website
           to connect in various events.</p>
-          <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn">See project</button>
+          <div class="html tech-desktop">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
+          <button class="card-btn card-btn-desktop">See project</button>
       </div>
 
-      <div class="card-2 card-desktop-2">
-        <img src="./images/Screenshot (37).png" alt="" class="img-1">
-        <b class="project-1">Portfolio Template</b>
-        <div class="card-title">
-          <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
+      <div class="card-2 card-desktop">
+        <img src="./images/Screenshot (37).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">Portfolio Template</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
-        <p class="card-text">A web developer portfolio
+        <p class="card-text text-desktop">A web developer portfolio
           template.</p>
-          <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn">See project</button>
+          <div class="html tech-desktop">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
+          <button class="card-btn card-btn-desktop">See project</button>
       </div>
 
-      <div class="card-3 card-desktop-3">
-        <img src="./images/Screenshot (38).png" alt="" class="img-1">
-        <b class="project-1">PatrolIQ</b>
-        <div class="card-title">
-          <h2 class="details">UI/UX</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"><b class="year">2024</b>
+      <div class="card-3 card-desktop">
+        <img src="./images/Screenshot (38).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">PatrolIQ</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">UI/UX</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"><b class="year">2024</b>
         </div>
-        <p class="card-text">An intelligent software solution designed to streamline security patrol operations</p>
-          <div class="html">Figma</div>
-          <button class="card-btn">See project</button>
+        <p class="card-text text-desktop">An intelligent software solution designed to streamline security patrol operations</p>
+          <div class="html tech-desktop">Figma</div>
+          <button class="card-btn card-btn-desktop">See project</button>
       </div>
     </section>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
     <hr>
     <section class="skills">
-      <b class="skills-list">Tech Skills</b>
+      <b class="skills-list skills-list-desktop">Tech Skills</b>
         <div class="skill-logos">
           <img src="./icons/html5.svg" alt="">
           <img src="./icons/css.svg" alt="">
@@ -91,13 +92,15 @@
           <img src="./icons/figma.svg" alt="" class="figma-logo">
         </div>
     </section>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <hr>
     <section class="contact">
-      <b class="contact-title">Contact</b>
-      <p class="contact-text">I’m currently looking for new opportunities to grow my tech experience, hit me up, and I will be in touch!
+      <b class="contact-title contact-title-desktop">Contact</b>
+      <p class="contact-text contact-text-desktop">I’m currently looking for new opportunities to grow my tech experience, hit me up, and I will be in touch!
       </p>
-      <a href="" class="contact-email">kayjes00@gmail.com</a>
+      <a href="" class="contact-email contact-email-desktop">kayjes00@gmail.com</a>
 
-      <div class="socials">
+      <div class="socials socials-desktop">
         <ul class="contact-socials">
           <li><img src="./icons/new-twitter.svg" alt="X" class="media"></li>
           <li><img src="./icons/mail.svg" alt="mail" class="media"></li>
