modify index files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="menu-wrap">
     <nav class="nav-bar">
-      <a href="#" class="logo"> < > </a>
+      <a href="#" class="logo"> <img src="./images/logo.png" alt="logo"> </a>
       <div class="off-screen-menu">
         <ul>
           <li>About</li>
@@ -28,6 +28,7 @@
     </header>
   <section class="wrapper">
     <h1>I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
+    <img src="./images/him.jpg" alt="Jesse" class="jesse">
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
 
     <h2 class="connect">LET'S CONNECT</h2>
