change the logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="menu-wrap">
     <nav class="nav-bar">
-      <a href="#" class="logo"> < > </a>
+      <a href="#" class="logo"> <img src="./images/logo.png" alt="logo"> </a>
       <ul class="desktop-menu desktop-menu-wrap">
         <li><a href="#">About</a></li>
         <li><a href="#">Work</a></li>
