--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header class="menu-wrap">
-    <nav class="nav-bar">
-      <a href="#" class="logo"> <img src="./images/logo.png" alt="logo"> </a>
+    <nav class="nav-bar" id="nav-bar">
+      <a href="#wrapper" class="logo"> <img src="./images/logo.png" alt="logo"> </a>
       <div class="off-screen-menu">
         <ul>
-          <li>About</li>
-          <li>Work</li>
-          <li>Skills</li>
-          <li>Contact</li>
+          <li><a href="#wrapper">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       
@@ -26,21 +26,13 @@
       </div>
     </nav>
     </header>
-  <section class="wrapper">
+  <section class="wrapper" id="wrapper">
     <h1>I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
     <img src="./images/him.jpg" alt="Jesse" class="jesse">
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
 
-    <h2 class="connect">LET'S CONNECT</h2>
-    <div class="socials">
-      <ul>
-        <li><img src="./icons/new-twitter.svg" alt="X" class="media"></li>
-        <li><img src="./icons/mail.svg" alt="mail" class="media"></li>
-        <li><img src="./icons/github.svg" alt="github" class="media"></li>
-        <li><img src="./icons/linkedin.svg" alt="linkedin" class="media"></li>
-      </ul>
-    </div>
-    <section class="work">
+    <button class="sayHibtn">Get it done👨🏿‍💻</button>
+    <section class="work" id="work">
       <b class="work-cards">Work</b>
       <div class="card-1">
         <img src="./images/Screenshot (36).png" alt="" class="img-1">
@@ -51,7 +43,7 @@
         <p class="card-text">An African movie youth website
           to connect in various events.</p>
           <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn">See project</button>
+          <button class="card-btn"><a href="" target="_blank">See project</a></button>
       </div>
 
       <div class="card-2">
@@ -77,7 +69,7 @@
           <button class="card-btn">See project</button>
       </div>
     </section>
-    <section class="skills">
+    <section class="skills" id="skills">
       <b class="skills-list">Tech Skills</b>
         <div class="skill-logos">
           <img src="./icons/html5.svg" alt="">
@@ -86,23 +78,27 @@
           <img src="./icons/figma.svg" alt="" class="figma-logo">
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
       <b class="contact-title">Contact</b>
       <p class="contact-text">I’m currently looking for new opportunities to grow my tech experience, hit me up, and I will be in touch!
       </p>
       <a href="" class="contact-email">kayjes00@gmail.com</a>
+      <br><br>
 
       <div class="socials">
         <ul class="contact-socials">
-          <li><img src="./icons/new-twitter.svg" alt="X" class="media"></li>
-          <li><img src="./icons/mail.svg" alt="mail" class="media"></li>
-          <li><img src="./icons/github.svg" alt="github" class="media"></li>
-          <li><img src="./icons/linkedin.svg" alt="linkedin" class="media"></li>
+          <li><a href="https://x.com/KayigireJesse" target="_blank"><img src="./icons/new-twitter.svg" alt="X" class="media"></a></li>
+          <li><a href="mailto:kayjes00.com"><img src="./icons/mail.svg" alt="mail" class="media"></a></li>
+          <li><a href="https://github.com/Jessekay" target="_blank"><img src="./icons/github.svg" alt="github" class="media"></a></li>
+          <li><a href="https://www.linkedin.com/in/kayigire/" target="_blank"><img src="./icons/linkedin.svg" alt="linkedin" class="media"></a></li>
         </ul>
       </div>
+      <br><br>
     </section>
+      <br><br><br><br>
     <footer>&copy; 2024, All rights reserved</footer>
-  </section>
+      <br><br>
+    </section>
  
   <script src="./index.js"></script>
 </body>
