Finish mobile version

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p class="card-text">An African movie youth website
           to connect in various events.</p>
           <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn"><a href="" target="_blank">See project</a></button>
+          <button class="card-btn"><a href="https://jessekay.github.io/AMS/" target="_blank">See project</a></button>
       </div>
 
       <div class="card-2">
@@ -55,7 +55,7 @@
         <p class="card-text">A web developer portfolio
           template.</p>
           <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn">See project</button>
+          <button class="card-btn"><a href="https://jessekay.github.io/My-portfolio/" target="_blank">See project</a></button>
       </div>
 
       <div class="card-3">
@@ -66,7 +66,7 @@
         </div>
         <p class="card-text">An intelligent software solution designed to streamline security patrol operations</p>
           <div class="html">Figma</div>
-          <button class="card-btn">See project</button>
+          <button class="card-btn"><a href="https://www.figma.com/design/tUcWuhcKRxaJLHxDe3hzpm/Untitled?node-id=0-1&t=5D62WPVSUJbdok5D-1" target="_blank">See project</a></button>
       </div>
     </section>
     <section class="skills" id="skills">
