--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <header class="menu-wrap">
     <nav class="nav-bar" id="nav-bar">
       <a href="#wrapper" class="logo"> <img src="./images/logo.png" alt="logo"> </a>
+
+      <ul class="desktop-menu desktop-menu-wrap">
+        <li><a href="#wrapper">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+
       <div class="off-screen-menu">
         <ul>
           <li><a href="#wrapper">About</a></li>
@@ -27,50 +35,59 @@
     </nav>
     </header>
   <section class="wrapper" id="wrapper">
-    <h1>I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
+    <h1 class="h1-desktop">I'm <b class="myName">Jesse</b> <br>Glad to see <br>you</h1>
     <img src="./images/him.jpg" alt="Jesse" class="jesse">
     <p class="intro"> <b>I’m a software developer enthusiast!</b> based in Rwanda, I can help you build a product, feature or website. Look through my work and experience! if you like what you see, don’t hesitate to contact me. </p>
 
+    <div class="img-profile"><img src="./images/him.jpg" alt="Jesse" class="img-responsive"></div>
+    <button class="btn-intro">Get it done👨🏿‍💻</button>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <hr>
+    <br><br><br><br><br><br><br><br><br>
+
     <button class="sayHibtn">Get it done👨🏿‍💻</button>
+
+
     <section class="work" id="work">
-      <b class="work-cards">Work</b>
-      <div class="card-1">
-        <img src="./images/Screenshot (36).png" alt="" class="img-1">
-        <b class="project-1">AMS</b>
-        <div class="card-title">
-          <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
+
+      <b class="work-cards desktop-cards">Work</b>
+      <div class="card-1 card-desktop">
+        <img src="./images/Screenshot (36).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">AMS</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
-        <p class="card-text">An African movie youth website
+        <p class="card-text text-desktop">An African movie youth website
           to connect in various events.</p>
-          <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn"><a href="https://jessekay.github.io/AMS/" target="_blank">See project</a></button>
+          <div class="html tech-desktop">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
+          <button class="card-btn card-btn-desktop"><a href="https://jessekay.github.io/AMS/" target="_blank">See project</a></button>
       </div>
 
-      <div class="card-2">
-        <img src="./images/Screenshot (37).png" alt="" class="img-1">
-        <b class="project-1">Portfolio Template</b>
-        <div class="card-title">
-          <h2 class="details">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
+      <div class="card-2 card-desktop">
+        <img src="./images/Screenshot (37).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">Portfolio Template</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">Front End</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"> <b class="year">2022</b>
         </div>
-        <p class="card-text">A web developer portfolio
+        <p class="card-text text-desktop">A web developer portfolio
           template.</p>
-          <div class="html">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
-          <button class="card-btn"><a href="https://jessekay.github.io/My-portfolio/" target="_blank">See project</a></button>
+          <div class="html tech-desktop">HTML &nbsp;&nbsp;&nbsp; CSS &nbsp;&nbsp;&nbsp; JS</div>
+          <button class="card-btn card-btn-desktop"><a href="https://jessekay.github.io/My-portfolio/" target="_blank">See project</a></button>
       </div>
 
-      <div class="card-3">
-        <img src="./images/Screenshot (38).png" alt="" class="img-1">
-        <b class="project-1">PatrolIQ</b>
-        <div class="card-title">
-          <h2 class="details">UI/UX</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"><b class="year">2024</b>
+      <div class="card-3 card-desktop">
+        <img src="./images/Screenshot (38).png" alt="" class="img-1 img-desktop">
+        <b class="project-1 project-desktop">PatrolIQ</b>
+        <div class="card-title card-title-desktop">
+          <h2 class="details details-desktop">UI/UX</h2> <img src="./icons/cal.svg" alt="yr" class="calendar"><b class="year">2024</b>
         </div>
-        <p class="card-text">An intelligent software solution designed to streamline security patrol operations</p>
-          <div class="html">Figma</div>
-          <button class="card-btn"><a href="https://www.figma.com/design/tUcWuhcKRxaJLHxDe3hzpm/Untitled?node-id=0-1&t=5D62WPVSUJbdok5D-1" target="_blank">See project</a></button>
+        <p class="card-text text-desktop">An intelligent software solution designed to streamline security patrol operations</p>
+          <div class="html tech-desktop">Figma</div>
+          <button class="card-btn card-btn-desktop"><a href="https://www.figma.com/design/tUcWuhcKRxaJLHxDe3hzpm/Untitled?node-id=0-1&t=5D62WPVSUJbdok5D-1" target="_blank">See project</a></button>
       </div>
     </section>
     <section class="skills" id="skills">
-      <b class="skills-list">Tech Skills</b>
+      <b class="skills-list skills-list-desktop">Tech Skills</b>
         <div class="skill-logos">
           <img src="./icons/html5.svg" alt="">
           <img src="./icons/css.svg" alt="">
@@ -79,13 +96,13 @@
         </div>
     </section>
     <section class="contact" id="contact">
-      <b class="contact-title">Contact</b>
-      <p class="contact-text">I’m currently looking for new opportunities to grow my tech experience, hit me up, and I will be in touch!
+      <b class="contact-title contact-title-desktop">Contact</b>
+      <p class="contact-text contact-text-desktop">I’m currently looking for new opportunities to grow my tech experience and open for advices, hit me up, and I will be in touch!
       </p>
-      <a href="" class="contact-email">kayjes00@gmail.com</a>
+      <a href="" class="contact-email contact-email-desktop">kayjes00@gmail.com</a>
       <br><br>
 
-      <div class="socials">
+      <div class="socials socials-desktop">
         <ul class="contact-socials">
           <li><a href="https://x.com/KayigireJesse" target="_blank"><img src="./icons/new-twitter.svg" alt="X" class="media"></a></li>
           <li><a href="mailto:kayjes00.com"><img src="./icons/mail.svg" alt="mail" class="media"></a></li>
